samples/_failures_safe/1761288520_fc5a21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdc41698.c: In function ‘main’:
./samples/SAFE/__tmp_bdc41698.c:150:15: error: expected ‘;’ at end of input
  150 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_bdc41698.c:150:9: error: expected declaration or statement at end of input
  150 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_bdc41698.c:150:9: error: expected declaration or statement at end of input
